--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Hello</h1>
     <p>How do you do?</p>
+    <ol>
+        <li>Good</li>
+        <li>Fine</li>
+        <li>Not good</li>
+    </ol>
 </body>
 </html>
